# stm32xx_hal_template

./: Cargo.toml  README-template.md  README.md  cargo-generate.toml
src/: main.rs
